RabbitMQ/rabbitmq.service.yaml
apiVersion: v1
kind: Service
metadata:
  name : rabbitmq
  labels:
    name: rabbitmq
spec: 
  ports: 
  - port: 15671
    targetPort: 15671
    name: onefivesixsevenone
  - port: 80
    targetPort: 15672
    name: rabbitmq-management 
  selector:
    app: rabbitmq
