RabbitMQ/rabbitmq.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq
spec:
  rules:
  - host: rabbitmq.qube.zone
    http:
      paths:
      - path:
        backend:
          serviceName: rabbitmq
          servicePort: 80
